--- a/latex/acousticbrainz-genre-task-me18.tex
+++ b/latex/acousticbrainz-genre-task-me18.tex
@@ -477,8 +477,9 @@ methods and results of teams participating in the task.
 
 We thank all contributors to AcousticBrainz. This research has
 received funding from the European Union's Horizon 2020 research and innovation
-programme under grant agreement No 688382 (AudioCommons).
-We also thank tagtraum industries for providing the Tagtraum
+programme under grant agreement No 688382 (AudioCommons) and 
+the Ministry of Economy and Competitiveness of the Spanish Government 
+(Reference: TIN2015-69935-P). We also thank tagtraum industries for providing the Tagtraum
 genre annotations.
 \end{acks}
 
