reference TROMPA and 2017 overview paper

--- a/latex/acousticbrainz-genre-task-me18.bib
+++ b/latex/acousticbrainz-genre-task-me18.bib
@@ -8,6 +8,12 @@
 %% Saved with string encoding Unicode (UTF-8)
 
 
+@inproceedings{bogdanov2017mediaeval,
+author = {Bogdanov, Dmitry and Porter, Alastair and Urbano, Juli{\'{a}}n and Schreiber, Hendrik},
+booktitle = {MediaEval Benchmark Workshop},
+title = {{The MediaEval 2017 AcousticBrainz Genre Task: Content-based Music Genre Recognition from Multiple Sources}},
+year = {2017}
+}
 
 @inproceedings{schreiber_improving_2015,
 	Address = {M{\'a}laga, Spain},
