--- a/latex/acousticbrainz-genre-task-me18.tex
+++ b/latex/acousticbrainz-genre-task-me18.tex
@@ -187,7 +187,7 @@ collections and submit music features to the AcousticBrainz database.
 Based on these features, additional
 metadata including genres can then be mined for recordings in the database.
 
-Since MediaEval 2017\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-Genre-Task/results/}},
+Since MediaEval 2017~\cite{bogdanov2017mediaeval},
 we have proposed a new genre recognition task using datasets based on AcousticBrainz. This task is different from a typical genre recognition task in the following ways:
 
 \begin{itemize}
@@ -477,8 +477,7 @@ methods and results of teams participating in the task.
 
 We thank all contributors to AcousticBrainz. This research has
 received funding from the European Union's Horizon 2020 research and innovation
-programme under grant agreement No 688382 (AudioCommons) and 
-the Ministry of Economy and Competitiveness of the Spanish Government 
+programme under grant agreements No 688382 (AudioCommons) and 770376-2 (TROMPA), as well as the Ministry of Economy and Competitiveness of the Spanish Government 
 (Reference: TIN2015-69935-P). We also thank tagtraum industries for providing the Tagtraum
 genre annotations.
 \end{acks}
